# eazy-quizzy

./: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
apps/quizzes/: admin.py  forms.py  models.py  selectors.py  services.py  urls.py  views.py
apps/quizzes/migrations/: 0001_initial.py  0002_alter_answer_options_alter_question_options_and_more.py  0003_rename_q_type_question_input_type.py  0004_rename_answer_questionresponse_answers.py  0005_alter_questionresponse_options_and_more.py  0006_alter_question_text.py  0007_alter_answer_text.py
apps/quizzes/templatetags/: user_filters.py
apps/users/: forms.py  urls.py  views.py
apps/users/migrations/: 0002_create_first_admin.py  0002_create_superuser.py
config/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: base.css  styles.css
templates/: base.html
templates/includes/: header.html  pagination.html
templates/quizzes/: index.html  quiz_attempt.html  quiz_details.html
